# FlowBolt

./: .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  package.json
backend/: .coveragerc  .dockerignore  .gitignore  App.Dockerfile  Dockerfile  alembic.ini  example.env  flowbolt-backend-2.tar  flowbolt-backend.tar  mypy.toml  pyproject.toml  pytest.ini  ruff.toml  run.py  test.env
backend/.github/actions/uv-setup/: action.yaml
backend/.github/workflows/: bump-package-version.yaml  call-bump-package-version.yaml  pull-request-pipeline.yaml
backend/app/: __main__.py  config.py  main.py
backend/app/ai/: BACKLOG.md  agent.py  agent_registry.py  fix_error_agent.py  followup_agent.py  helpers.py  parser.py  prompts.py  prompts_legacy.py  provider.py  state.py  task_tree.py
backend/app/ai/agents/: __init__.py  base.py  build.py  fix_error.py  followup.py
backend/app/ai/core/: __init__.py  messages.py  tools.py
backend/app/ai/prompts/: __init__.py  architecture.py  classify.py  codegen.py  followup.py  merge.py  summary.py  user_plan.py  ux_design.py
backend/app/ai/services/: __init__.py  design.py  execution.py  planning.py
backend/app/ai/tools/: __init__.py  edit_file.py  glob.py  grep.py  read_file.py  write_file.py
backend/app/api/: chat.py  errors.py  export.py  files.py  models.py  package_api.py  preview.py  projects.py  publish.py  server_log.py  terminal.py
backend/app/integrations/: package_api.py  s3.py
backend/app/models/: chat.py  events.py  project.py  session.py
backend/app/sandbox/: base.py  filesystem.py  local.py  manager.py  namespaced.py  nsjail.py  pty.py  search.py  windows_local.py
backend/benchmarks/: config-test.yaml  config.yaml
backend/benchmarks/src/: __main__.py  patches.py  report.py  runner.py
backend/migrations/: env.py
backend/migrations/versions/: 7c1991be16e2_initial_migration.py  f33338d0ad80_initial_migration.py
backend/mocks/: docker-compose.models.yaml  package.json  requirements.txt  server.js  test-mock.js
backend/mocks/tests/: test_model_mock.py
backend/nsjail/: sandbox.cfg
backend/pnpm-project-template/: .template-guard.json  ROUTER_GUIDE.md  ROUTING.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
backend/pnpm-project-template/routing-stub/: AppRouter.tsx
backend/pnpm-project-template/src/: App.tsx  config.ts  main.tsx  vite-env.d.ts
backend/pnpm-project-template/src/api/: client.ts
backend/pnpm-project-template/src/auth/: AuthGate.tsx  iframeAuth.ts  index.ts  popup.ts  session.ts  storage.ts  types.ts  user.ts
backend/pnpm-project-template/src/components/: BuildInfoBadge.tsx
backend/pnpm-project-template/src/constants/: buildInfo.ts  paths.ts
backend/pnpm-project-template/src/platform/: routerBasename.ts
backend/pnpm-project-template/src/utils/: routerBasename.ts
backend/src/alembic/versions/: 2026_03_29_1207-9d6eeadce019_initial_migration.py  (+4 more)
backend/src/flow44/: __main__.py  config.py  main.py  paths.py  template_guard.py
backend/src/flow44/ai/: BACKLOG.md  parser.py  (+6 more)
backend/tests/: conftest.py  test.env  test_build_db_url.py  test_data_source_api.py  test_data_source_cases.py  test_database_helpers.py  test_db.py  test_export.py  test_flow.py  test_parser.py  test_paths.py  test_prompts.py  test_publish_headers.py  test_router_basename.py  test_s3_integration.py  test_safe_path.py  test_schemas.py  test_task_tree.py  test_template_guard.py  test_template_platform.py  test_tools.py  test_user_isolation.py
backend/tests/ai/: test_execute_platform_guard.py  test_helpers.py  test_parser.py  test_prompts.py  test_schemas.py  test_task_tree.py
backend/tests/api/: test_auth.py  test_chat_ws_auth.py  test_data_source_api.py  test_export.py  test_files_api.py  test_publish_headers.py  test_publish_slug.py
backend/tests/db/: test_database_helpers.py  test_db.py
backend/tests/errors/: test_error_parser.py
backend/tests/integrations/: test_flapi.py  test_s3_integration.py
backend/tests/logic/: __init__.py  test_can_run_without_params.py  test_get_usage.py  test_params_info_conversion.py
backend/tests/sandbox/: conftest.py  test_filesystem_mixin.py  test_local_sandbox_exec.py  test_operations.py  test_pnpm_routing.py  test_safe_path.py  test_sandbox_lifecycle.py  test_sandbox_manager.py  test_search_mixin.py
(+415 files in other folders)
