[project]
name = "ai-builder-backend"
version = "0.1.0"
description = "AI Web App Builder - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "litellm>=1.55.10",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.7.1",
    "websockets>=14.1",
    "python-multipart>=0.0.19",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "langfuse==2.59.7",
    "boto3>=1.42.68",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]

[project.scripts]
dev = "app.__main__:main_dev"
start = "app.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
