[project]
name = "flow-44-backend"
version = "0.1.0"
description = "AI Web App Builder - Backend"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.68",
    "fastapi>=0.115.6",
    "greenlet>=3.3.2",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "langfuse==2.59.7",     # using langfuse 2.59.7 compatible with litellm
    "litellm>=1.55.10,<1.82.3",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.19",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.1",
]

[dependency-groups]
dev = [
    # General for running task
    "taskipy>=1.14.1",
    # Linting
    "ruff>=0.14.2",
    "mypy>=1.10.1",
    # Typing Stubs
    "boto3-stubs[bedrock-runtime]>=1.42.0",
    # Benchmarks
    "pyyaml>=6.0",
    "typer>=0.24.1",
    "playwright>=1.58.0",
    # Pytest
    "pytest>=8.2.2,<9",
    "pytest-asyncio>=0.23.7,<0.24",
    "pytest-cov>=5.0.0,<6",
    "pytest-xdist>=3.6.1,<4",
]

[project.scripts]
dev = "flow44.__main__:main_dev"
start = "flow44.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flow44"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.taskipy.tasks]
ruff = "bash -c 'ruff format --config ruff.toml \"$@\" && ruff check --config ruff.toml \"$@\"' --"
ruff-all = "task ruff src/"
ruff-dry = "bash -c 'ruff format --check --config ruff.toml \"$@\" && ruff check --no-fix --config ruff.toml \"$@\"' --"
ruff-dry-all = "task ruff-dry src/"

mypy = "mypy --config-file mypy.toml \"$@\""
mypy-all = "task mypy src/"

lint = "bash -c 'task mypy \"$@\" && task ruff \"$@\"' --"
lint-all = "task lint src/"

tests = "pytest"
tests-all = "task tests"

benchmark = "python -m benchmarks.src -c \"$@\""
benchmark-main = "task benchmark config.yaml"
